# hangman_sdd_test

./: AGENTS.md  README.md  pyproject.toml
data/: words.txt
src/hangman/: __main__.py  cli.py  game.py  word_selector.py
src/hangman.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_game.py  test_word_selector.py
