[project]
name = "hangman"
version = "0.1.0"
description = "A Python Hangman CLI game"
requires-python = ">=3.10"
dependencies = [
    "nltk>=3.9",
    "pytest>=9.0",
    "ruff>=0.15",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
